# smallptGPU-Py

./: LICENCE  README.md  camera.py  control_panel.py  displayfunc.py  geom.py  pyproject.toml  renderconfig.py  renderdevice.py  rendering_kernel.cl  smallptGPU.py  vec.py
