[project]
name = "smallpt-gpu-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.1",
    "pillow>=12.1.0",
    "pyopencl>=2026.1.1",
    "pyopengl>=3.1.10",
    "pyopengl-accelerate>=3.1.10",
    "siphash24>=1.8",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
